@@ -6,36 +6,30 @@ module Jekyll
     pygments_prefix '\n'
     pygments_suffix '\n'
 
-    def initialize(config = {})
+    def setup
+      return if @setup
       # Set the Markdown interpreter (and Maruku self.config, if necessary)
-      case config['markdown']
+      case @config['markdown']
         when 'rdiscount'
           begin
             require 'rdiscount'
-
-            def convert(content)
-              RDiscount.new(content).to_html
-            end
-
           rescue LoadError
-            puts 'You must have the rdiscount gem installed first'
+            STDERR.puts 'You are missing a library required for Markdown. Please run:'
+            STDERR.puts '  $ [sudo] gem install rdiscount'
+            raise FatalException.new("Missing dependency: rdiscount")
           end
         when 'maruku'
           begin
             require 'maruku'
 
-            def convert(content)
-              Maruku.new(content).to_html
-            end
-
-            if config['maruku']['use_divs']
+            if @config['maruku']['use_divs']
               require 'maruku/ext/div'
-              puts 'Maruku: Using extended syntax for div elements.'
+              STDERR.puts 'Maruku: Using extended syntax for div elements.'
             end
 
-            if config['maruku']['use_tex']
+            if @config['maruku']['use_tex']
               require 'maruku/ext/math'
-              puts "Maruku: Using LaTeX extension. Images in `#{config['maruku']['png_dir']}`."
+              STDERR.puts "Maruku: Using LaTeX extension. Images in `#{@config['maruku']['png_dir']}`."
 
               # Switch off MathML output
               MaRuKu::Globals[:html_math_output_mathml] = false
@@ -44,16 +38,21 @@ module Jekyll
               # Turn on math to PNG support with blahtex
               # Resulting PNGs stored in `images/latex`
               MaRuKu::Globals[:html_math_output_png] = true
-              MaRuKu::Globals[:html_png_engine] =  config['maruku']['png_engine']
-              MaRuKu::Globals[:html_png_dir] = config['maruku']['png_dir']
-              MaRuKu::Globals[:html_png_url] = config['maruku']['png_url']
+              MaRuKu::Globals[:html_png_engine] =  @config['maruku']['png_engine']
+              MaRuKu::Globals[:html_png_dir] = @config['maruku']['png_dir']
+              MaRuKu::Globals[:html_png_url] = @config['maruku']['png_url']
             end
           rescue LoadError
-            puts "The maruku gem is required for markdown support!"
+            STDERR.puts 'You are missing a library required for Markdown. Please run:'
+            STDERR.puts '  $ [sudo] gem install maruku'
+            raise FatalException.new("Missing dependency: maruku")
           end
         else
-          raise "Invalid Markdown processor: '#{config['markdown']}' -- did you mean 'maruku' or 'rdiscount'?"
+          STDERR.puts "Invalid Markdown processor: #{@config['markdown']}"
+          STDERR.puts "  Valid options are [ maruku | rdiscount ]"
+          raise FatalException.new("Invalid Markdown process: #{@config['markdown']}")
       end
+      @setup = true
     end
 
     def matches(ext)
@@ -64,6 +63,15 @@ module Jekyll
       ".html"
     end
 
+    def convert(content)
+      setup
+      case @config['markdown']
+        when 'rdiscount'
+          RDiscount.new(content).to_html
+        when 'maruku'
+          Maruku.new(content).to_html
+      end
+    end
   end
 
 end
